--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-mixin": "^2.0.2",
+    "react-responsive": "^4.0.3",
     "react-router": "^2.8.1",
     "style-loader": "^0.13.1",
     "webpack": "^3.8.1",
