--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "css-loader": "^0.25.0",
+    "fetch": "^1.1.0",
     "json-loader": "^0.5.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
